test/compile-fail/resolution/conflicts/many/expected.txt
error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/many/top.rhdl:1:8
  │
1 │ struct a {}
  │        - previous definition of the name `a` here
2 │ enum a {}
  │      ^ `a` redefined here

error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/many/top.rhdl:2:6
  │
2 │ enum a {}
  │      - previous definition of the name `a` here
3 │ entity a {}
  │        ^ `a` redefined here

error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/many/top.rhdl:3:8
  │
3 │ entity a {}
  │        - previous definition of the name `a` here
4 │ const a: b = false;
  │       ^ `a` redefined here

error[E0428]: the name `a` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/many/top.rhdl:4:7
  │
4 │ const a: b = false;
  │       - previous definition of the name `a` here
5 │ type a = b;
  │      ^ `a` redefined here

